feat: added poles osm api endpoints. Added tests and updated api doc
